# cursor-helper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DISCLAIMER.md  Justfile  README.md
.claude/commands/: discuss.md  gov.md  quick.md  status.md
.github/workflows/: ci.yml  release.yml
docs/rfc/: RFC-0000.md  RFC-0001.md
gov/: config.toml  releases.toml
gov/rfc/RFC-0000/: rfc.json
gov/rfc/RFC-0000/clauses/: C-NONGOALS.json  C-PRINCIPLES.json  C-SCOPE.json  C-VISION.json
gov/rfc/RFC-0001/: rfc.json
gov/rfc/RFC-0001/clauses/: C-COMMANDS.json  C-OMITTED.json  C-PRIORITY.json  C-SAFETY.json
gov/work/: 2026-01-19-fix-pre-publish-issues.toml  2026-01-19-implement-rfc-0001-feature-commands.toml  2026-01-19-write-meta-rfc-for-cursor-helper-project.toml  2026-01-23-fix-windows-rename-command.toml  2026-01-23-fix-workspace-tests-windows.toml  2026-01-23-skip-mutliroot-workspace-parsing.toml  2026-01-28-export-chat-enhancements.toml  2026-01-28-export-chat-remote-sessions.toml  2026-01-28-fix-stats-windows-path-prefix.toml  2026-01-28-fix-windows-path-matching-with-tests.toml  2026-01-28-list-show-workspace-id-column.toml
src/: config.rs  lib.rs  main.rs
src/commands/: backup.rs  clean.rs  clone.rs  export_chat.rs  list.rs  mod.rs  rename.rs  restore.rs  stats.rs  utils.rs
src/cursor/: chat_sessions.rs  folder_id.rs  mod.rs  sqlite_value.rs  storage.rs  workspace.rs
